--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.10",
-    "nodemon": "^2.0.12"
+    "@types/supertest": "^2.0.11",
+    "babel-jest": "^27.1.0",
+    "jest": "^27.1.0",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5"
   },
   "scripts": {
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts"
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts",
+    "test:dev": "jest --watchAll"
   }
 }
