add type orm packages and configurate connection to db

--- a/.env.defaults
+++ b/.env.defaults
@@ -1,2 +1,9 @@
 JWT_TOKEN = yeggaa102030
 PORT = 3000
+
+TYPEORM_CONNECTION = postgres
+TYPEORM_HOST = localhost
+TYPEORM_PORT = 5432
+TYPEORM_USERNAME = root
+TYPEORM_PASSWORD = 102030
+TYPEORM_DATABASE = restexpress
