--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.2.1",
+    "typeorm": "^0.2.37",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
