--- a/.env.defaults
+++ b/.env.defaults
@@ -7,3 +7,5 @@ TYPEORM_PORT = 5432
 TYPEORM_USERNAME = root
 TYPEORM_PASSWORD = 102030
 TYPEORM_DATABASE = restexpress
+TYPEORM_MIGRATIONS = src/migration/**/*.ts
+TYPEORM_MIGRATIONS_DIR = src/migration
