--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.5",
     "ajv": "^8.6.2",
     "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -29,6 +31,8 @@
   },
   "scripts": {
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts",
-    "test:dev": "jest --watchAll --detectOpenHandles"
+    "test:dev": "jest --watchAll --detectOpenHandles",
+    "mRun": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:run",
+    "mRevert": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:revert"
   }
 }
