--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "testcontainers": "^7.20.0",
     "ts-node": "^10.2.1",
     "typeorm": "^0.2.37",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^8.5.5",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.7.10",
     "@types/supertest": "^2.0.11",
     "babel-jest": "^27.1.0",
