--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3.4"
 services:
-
   postgres:
     image: ${POSTGIS:-postgis/postgis}
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-user}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
-      POSTGRES_DATABASE: restexpress
+      POSTGRES_DATABASE: "restexpress"
     volumes:
       - postgres-data:/var/lib/postgresql/data/
     ports:
