--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts",
     "test:dev": "NODE_ENV=test jest --watchAll --detectOpenHandles",
     "mRun": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:run",
-    "mRevert": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:revert"
+    "mRevert": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:revert",
+    "build": "tsc",
+    "start:prod": "NODE_ENV=prod PORT=3000 JWT_TOKEN=yeggaa102030 TYPEORM_CONNECTION=postgres TYPEORM_PORT=5432 TYPEORM_USERNAME=root TYPEORM_PASSWORD=102030 TYPEORM_DATABASE=restexpress TYPEORM_SCHEMA=public TYPEORM_MIGRATIONS_DIR=src/migration TYPEORM_MIGRATIONS=src/migration/**/*.js node build/src/index.js"
   }
 }
