--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rest-express",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "build/index.js",
   "license": "MIT",
   "dependencies": {
     "ajv": "^8.6.2",
@@ -31,11 +31,11 @@
     "ts-jest": "^27.0.5"
   },
   "scripts": {
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts",
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" index.ts",
     "test:dev": "NODE_ENV=test jest --watchAll --detectOpenHandles",
     "mRun": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:run",
     "mRevert": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:revert",
-    "build": "tsc",
-    "start:prod": "NODE_ENV=prod PORT=3000 JWT_TOKEN=yeggaa102030 TYPEORM_CONNECTION=postgres TYPEORM_PORT=5432 TYPEORM_USERNAME=root TYPEORM_PASSWORD=102030 TYPEORM_DATABASE=restexpress TYPEORM_SCHEMA=public TYPEORM_MIGRATIONS_DIR=src/migration TYPEORM_MIGRATIONS=src/migration/**/*.js node build/src/index.js"
+    "build": "tsc -p .",
+    "start:prod": "NODE_ENV=prod PORT=3000 JWT_TOKEN=yeggaa102030 TYPEORM_CONNECTION=postgres TYPEORM_PORT=5432 TYPEORM_USERNAME=root TYPEORM_PASSWORD=102030 TYPEORM_DATABASE=restexpress TYPEORM_SCHEMA=public TYPEORM_MIGRATIONS_DIR=src/migration TYPEORM_MIGRATIONS=src/migration/**/*.js node build/index.js"
   }
 }
