--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "rootDir": "./",
+    "rootDir": ".",
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
